[gd_scene load_steps=10 format=3 uid="uid://bd746tlbaason"]

[ext_resource type="Script" path="res://nemesis_mode.gd" id="1_yjsf6"]
[ext_resource type="Theme" uid="uid://x2175fp860iw" path="res://nameLabel.tres" id="2_3wcum"]
[ext_resource type="StyleBox" uid="uid://bbuh8oxmxqsqr" path="res://new_style_box_flat.tres" id="3_r220b"]
[ext_resource type="Theme" uid="uid://dwvsgrp45xty2" path="res://NewMainButton.tres" id="4_ewqf6"]
[ext_resource type="StyleBox" uid="uid://d36m1th6a44ss" path="res://button.tres" id="5_bhduw"]
[ext_resource type="PackedScene" uid="uid://wrcbtcwy03i8" path="res://SectorRow.tscn" id="6_25jia"]

[sub_resource type="Theme" id="Theme_svhul"]
Button/styles/normal = ExtResource("5_bhduw")

[sub_resource type="Theme" id="Theme_0k7v3"]
LineEdit/styles/normal = ExtResource("3_r220b")

[sub_resource type="Theme" id="Theme_h14tp"]
LineEdit/styles/normal = ExtResource("3_r220b")

[node name="Node" type="Node"]
script = ExtResource("1_yjsf6")
metadata/_edit_vertical_guides_ = [1130.0]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 1.067
anchor_bottom = 1.04
offset_right = 0.199987
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.339
anchor_bottom = 1.0
offset_right = 0.471985
grow_horizontal = 2
grow_vertical = 2

[node name="Hbox-Titles" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
offset_left = 46.0
offset_top = 76.0
offset_right = 354.0
offset_bottom = 101.0
alignment = 2

[node name="Sector" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(64.725, 25)
layout_mode = 2
theme = ExtResource("2_3wcum")
text = "
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="S1" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(42, 25)
layout_mode = 2
theme = ExtResource("2_3wcum")
text = "1
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="S2" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(42, 25)
layout_mode = 2
theme = ExtResource("2_3wcum")
text = "2
"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="S3" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(42, 25)
layout_mode = 2
theme = ExtResource("2_3wcum")
text = "3
"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator4" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="Total" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_3wcum")
text = "Total"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="HSeparator2" type="HSeparator" parent="Control"]
layout_mode = 0
offset_left = -3.0
offset_top = 650.0
offset_right = 440.0
offset_bottom = 666.0

[node name="HSeparator" type="HSeparator" parent="Control"]
layout_mode = 0
offset_left = -5.0
offset_top = 523.0
offset_right = 436.0
offset_bottom = 539.0

[node name="VSeparator2" type="VSeparator" parent="Control"]
layout_mode = 0
offset_left = 350.0
offset_top = 74.0
offset_right = 358.0
offset_bottom = 475.0

[node name="VSeparator" type="VSeparator" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 78.0
offset_right = 52.0
offset_bottom = 488.0

[node name="Apply Sector" type="Button" parent="Control"]
layout_mode = 0
offset_left = 264.0
offset_top = 556.0
offset_right = 322.0
offset_bottom = 588.0
focus_mode = 0
theme = SubResource("Theme_svhul")
text = "Apply"

[node name="Sector Timing" parent="Control" instance=ExtResource("6_25jia")]
offset_left = 56.0
offset_top = 112.0
offset_right = 360.0
offset_bottom = 141.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.16
anchor_right = 2.543
anchor_bottom = 0.534
offset_left = -15.0296
offset_top = -3.00002
offset_right = 18.9689
offset_bottom = 0.399963
follow_focus = true
horizontal_scroll_mode = 0

[node name="TimingContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2

[node name="Options" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IP_Input" type="LineEdit" parent="Control/Options"]
layout_mode = 1
anchors_preset = -1
offset_left = 16.0
offset_top = 748.0
offset_right = 138.0
offset_bottom = 779.0
theme = SubResource("Theme_0k7v3")
placeholder_text = "Local IP"

[node name="Connect Button" type="Button" parent="Control/Options"]
layout_mode = 1
anchors_preset = -1
offset_left = 27.0
offset_top = 786.0
offset_right = 103.0
offset_bottom = 829.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_ewqf6")
text = "Connect"

[node name="DC Button" type="Button" parent="Control/Options"]
visible = false
layout_mode = 1
offset_left = 19.0
offset_top = 787.0
offset_right = 118.0
offset_bottom = 827.0
focus_mode = 0
theme = SubResource("Theme_svhul")
text = "Disconnect"

[node name="CheckButton" type="CheckButton" parent="Control/Options"]
layout_mode = 0
offset_left = 245.0
offset_top = 832.0
offset_right = 389.0
offset_bottom = 863.0
text = "Transparent"

[node name="CopyToClipboardButton" type="Button" parent="Control/Options"]
layout_mode = 0
offset_left = 154.0
offset_top = 748.0
offset_right = 262.0
offset_bottom = 779.0
focus_mode = 0
theme = ExtResource("4_ewqf6")
text = "Copy Result"

[node name="menu" type="Button" parent="Control/Options"]
layout_mode = 0
offset_left = 29.0
offset_top = 832.0
offset_right = 87.0
offset_bottom = 864.0
focus_mode = 0
theme = SubResource("Theme_svhul")
text = "Menu"

[node name="Reset Pilots" type="Button" parent="Control/Options"]
layout_mode = 0
offset_left = 157.0
offset_top = 831.0
offset_right = 215.0
offset_bottom = 863.0
focus_mode = 0
theme = SubResource("Theme_svhul")
text = "Reset"

[node name="ip_dropdown" type="OptionButton" parent="Control/Options"]
layout_mode = 0
offset_left = 14.0
offset_top = 705.0
offset_right = 136.0
offset_bottom = 725.0

[node name="FPS_Mode" type="CheckButton" parent="Control/Options"]
layout_mode = 0
offset_left = 278.0
offset_top = 803.0
offset_right = 389.0
offset_bottom = 834.0
text = "Low FPS"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 57.0
offset_top = 533.0
offset_right = 242.0
offset_bottom = 586.0

[node name="End Gate Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Sector End Gates:"

[node name="Sector_end_gates" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Sector Input 1" type="LineEdit" parent="Control/VBoxContainer/Sector_end_gates"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
placeholder_text = "S1"
alignment = 1

[node name="Sector Input 2" type="LineEdit" parent="Control/VBoxContainer/Sector_end_gates"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
placeholder_text = "S2"
alignment = 1

[node name="Sector Input 3" type="LineEdit" parent="Control/VBoxContainer/Sector_end_gates"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
placeholder_text = "S3"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Target Time Label" type="Label" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
text = "Target Times: (optional)"

[node name="Target_Times" type="HBoxContainer" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2

[node name="s1_time" type="LineEdit" parent="Control/VBoxContainer/Target_Times"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
text = "---"
placeholder_text = "T1"
alignment = 1

[node name="s2_time" type="LineEdit" parent="Control/VBoxContainer/Target_Times"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
text = "---"
placeholder_text = "T2"
alignment = 1

[node name="s3_time" type="LineEdit" parent="Control/VBoxContainer/Target_Times"]
layout_mode = 2
theme = SubResource("Theme_h14tp")
text = "---"
placeholder_text = "T3"
alignment = 1

[node name="HeartbeatTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Text Renamer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Polling Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="pressed" from="Control/Apply Sector" to="." method="apply_sectors"]
[connection signal="pressed" from="Control/Options/Connect Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Options/DC Button" to="." method="_on_disconnect_pressed"]
[connection signal="toggled" from="Control/Options/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Control/Options/CopyToClipboardButton" to="." method="_on_copy_to_clipboard_button_pressed"]
[connection signal="pressed" from="Control/Options/menu" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/Options/Reset Pilots" to="." method="full_reset"]
[connection signal="item_selected" from="Control/Options/ip_dropdown" to="." method="_on_ip_dropdown_item_selected"]
[connection signal="toggled" from="Control/Options/FPS_Mode" to="." method="_on_fps_mode_toggled"]
[connection signal="timeout" from="HeartbeatTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Text Renamer" to="." method="_on_text_renamer_timeout"]
[connection signal="timeout" from="Polling Timer" to="." method="_on_polling_timer_timeout"]
